Week 5/5. Parameter/ros2_ws/log/build_2022-09-04_16-25-53/pkg_py/stderr.log
  File "/home/loye/Desktop/Projects/ROS-100-Days-Coding-Challenge/Week 5/5. Parameter/ros2_ws/install/pkg_py/lib/python3.8/site-packages/pkg_py/number_publisher.py", line 16
    def publish_number(self){
                            ^
SyntaxError: invalid syntax

